Move printing to a new tools button
Summary:
{nav Print} does neither belong to {nav Save} nor {nav Save As}, so it
goes into a new menu button called {nav Tools}. More entries will be
added to the menu in D10295 and possibly in T6321.

In order to gain more horizontal space, {nav Export Image...} is renamed
to {nav Export}, which is in line with the other buttons not repeating
"image". "..." is removed as it should be only added to the menu entries
itself if necessary and the arrow on the button is enough to indicate
its purpose.

Ref. T7841

Test Plan:
{F5697449}

- Printing via the button still works, as well as {key Ctrl P}.
- Somewhat sensible icon chosen for the button.
- Docbook updated.

Reviewers: #spectacle, ngraham

Reviewed By: #spectacle, ngraham

Subscribers: ngraham

Differential Revision: https://phabricator.kde.org/D10371

--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -186,7 +186,7 @@
 		<sect1>
 			<title>Buttons</title>
 
-			<para>There are five buttons located at the bottom of the &spectacle; window. Their functions are described below:</para>
+			<para>There are six buttons located at the bottom of the &spectacle; window. Their functions are described below:</para>
 
 			<variablelist>
 				<varlistentry>
@@ -202,7 +202,13 @@
 					</listitem>
 				</varlistentry>
 				<varlistentry>
-					<term><guibutton>Export Image...</guibutton></term>
+					<term><guibutton>Tools</guibutton></term>
+					<listitem>
+						<para>Clicking on this button shows a drop-down menu, offering access to the print dialog.</para>
+					</listitem>
+				</varlistentry>
+				<varlistentry>
+					<term><guibutton>Export</guibutton></term>
 					<listitem>
 						<para>This drop-down menu will allow you to directly open the screenshot with all programs that are associated with the PNG (Portable Network Graphics) &MIME; type. Depending on what programs are installed, you will be able to open and edit the snapshot in your graphics applications or viewers.</para>
 
