Remove "Remember last used Save mode" checkbox
Summary:
Per Nate Graham: "This UI control is a relic from a prior version of spectacle when the "Save" split button's menu was full of items. Now, it only has two, and this setting is checked by default. The use case for turning it off is pretty difficult to envision now. Therefore, in the interest of de-cluttering, let's remove it."

BUG: 390809

Before:
{F5723847}

After:
{F5723849}

Test Plan:
# Select `Save` button.
# Close Spectacle.
# Open Spectacle.
# `Save` is active.
# Select `Save As`.
# Close Spectacle.
# Open Spectacle.
# `Save As` is active.

Reviewers: rkflx, ngraham, #spectacle

Reviewed By: rkflx, ngraham, #spectacle

Subscribers: acrouthamel, ngraham, rkflx

Tags: #spectacle

Differential Revision: https://phabricator.kde.org/D10711

--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -113,7 +113,7 @@
 
 		<para>The image can be saved to a location of your choice by clicking on the <guibutton>Save As</guibutton> button or typing <keycombo action="simul">&Ctrl;&Shift;<keycap>S</keycap></keycombo>. This opens the standard save dialog, where you can choose the filename, the folder location, and the format that your screenshot will be saved in. You may edit the filename to anything you wish, including the name of a previously saved screenshot.</para>
 
-		<para>To save a screenshot to the default location, click on the arrow portion of the <guibutton>Save As...</guibutton> button and press the <guimenuitem>Save </guimenuitem> (<keycombo action="simul">&Ctrl;<keycap>S</keycap></keycombo>) button. The new save mode will be remembered for next time; this behavior can be configured in Spectacle's settings. The default save location and filename can also be configured there, as described later.</para>
+		<para>To save a screenshot to the default location, click on the arrow portion of the <guibutton>Save As...</guibutton> button and press the <guimenuitem>Save </guimenuitem> (<keycombo action="simul">&Ctrl;<keycap>S</keycap></keycombo>) button. The new save mode will be remembered for next time. The default save location and filename can be configured, as described later.</para>
 
 		<para>To quickly save the image and quit &spectacle;, click on the checkbox beside <guilabel>Quit after Save or Copy</guilabel>, then click the arrow portion of the <guibutton>Save As...</guibutton> button and press the <guimenuitem>Save</guimenuitem> (<keycombo action="simul">&Ctrl;<keycap>S</keycap></keycombo>) item. This saves the image as a PNG file in your default Pictures folder, and exits the application immediately. As above, this new save mode will be remembered.</para>
 
@@ -255,12 +255,6 @@
 					</textobject>
 				</mediaobject>
 			<variablelist>
-				<varlistentry>
-					<term><guilabel>Remember last used Save mode</guilabel></term>
-					<listitem>
-						<para>The default behavior of the save button is to display <guibutton>Save As</guibutton>. Choosing another save mode by clicking on the arrow portion of the button will make that save mode the default one. Disable this option to make the button stop remembering the last used save mode</para>
-					</listitem>
-				</varlistentry>
 				<varlistentry>
 					<term><guilabel>Copy save location to clipboard</guilabel></term>
 					<listitem>
