Add optional window title to filename templates
Summary:
Add '%T' placeholder for filename pattern to insert window title.

Example filenames for pattern `%Y-%M-%D %H-%m-%S. %T`:
2018-02-21 19-11-55. romas : byobu.png
2018-02-21 19-12-20.png

Example filenames for pattern `%T`:
romas : byobu.png
Screenshot.png

Closes T8036
FEATURE: 378463
FIXED-IN: 18.04.0

Test Plan:
Steps:
# Go to `Configure... -> Save`.
# Enter to `Default Save Filename -> Filename` tempate `%Y-%M-%D %H-%m-%S. %T`.
# Press `OK`.
# Save screenshot.
# Observe that screenshot filename matches pattern.

Examples of filenames with empty window title:
> | Input | Result |
> | --- | --- |
> | Screenshot_%T_ProjectX | Screenshot_ProjectX |
> | %T_ProjectX | ProjectX |
> | Screenshot_%T | Screenshot |
> | %T | Screenshot |

Reviewers: rkflx, #spectacle

Reviewed By: rkflx, #spectacle

Subscribers: ngraham, rkflx

Tags: #spectacle

Maniphest Tasks: T8036

Differential Revision: https://phabricator.kde.org/D10709

--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -311,6 +311,7 @@
 						<listitem><para><userinput>%H</userinput>: Hour</para></listitem>
 						<listitem><para><userinput>%m</userinput>: Minute</para></listitem>
 						<listitem><para><userinput>%S</userinput>: Second</para></listitem>
+						<listitem><para><userinput>%T</userinput>: Window title</para></listitem>
 						</itemizedlist>
 						<para>If a file with this name already exists, a serial number will be appended to the filename. For example, if the filename is 						<filename>Screenshot</filename>, and <filename>Screenshot.png</filename> already exists, the image will be saved as <filename>Screenshot-1.png</filename>.</para>
 						<para>Typing an extension into the filename will automatically set the image format correctly and remove the extension from the filename field.</para>
