Auto-copy shared image link to clipboard
Summary:
Whenever an image is shared and a link is provided, the link is automatically copied to the clipboard.

We also rename the {nav Copy save location} checkbox to prevent user confusion with this new feature (and also to better reflect what the {nav Copy save location} feature actually does).

FEATURE: 392722
FIXED-IN 18.08.0

Test Plan:
Shared an image via Imgur. The link immediately appeared at the top of Klipper's history.

{F5918565}

Reviewers: #spectacle, #kde_applications, rkflx

Reviewed By: #spectacle, rkflx

Subscribers: kde-doc-english, rkflx

Tags: #documentation

Differential Revision: https://phabricator.kde.org/D13493

--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -257,7 +257,7 @@
                 </mediaobject>
             <variablelist>
                 <varlistentry>
-                    <term><guilabel>Copy save location to clipboard</guilabel></term>
+                    <term><guilabel>Copy file location to clipboard after saving</guilabel></term>
                     <listitem>
                         <para>When a screenshot is saved, copy the location at which the file was saved to the clipboard. You can then paste it anywhere that accepts
                         text input. Note that you must be running a clipboard manager in order to keep the path in the clipboard after &spectacle; quits.</para>
