Fix typos in docbook
Summary:
c6a767100086 and 2b1c8bec0fd1 forgot to add markup to make
mentions of "Spectacle" entities. By changing to `&spectacle;`, the
proper uppercase spelling is used in every case, too, which was not the
case before.

Test Plan:
Start Spectacle, press {key F1}, check consistent spelling of
"Spectacle".

Reviewers: #spectacle, yurchor

Reviewed By: yurchor

Subscribers: kde-doc-english

Tags: #documentation

Differential Revision: https://phabricator.kde.org/D13860

--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -118,7 +118,7 @@
         <sect1 id="taking-screenshot">
             <title>Taking A Screenshot</title>
 
-            <para>When you open spectacle, it immediately takes a screenshot of the whole screen as a convenience and shows a preview of it in the main window. You can save this screenshot using the buttons on the bottom of the window, or take a new one using the controls to the right of the preview.</para>
+            <para>When you open &spectacle;, it immediately takes a screenshot of the whole screen as a convenience and shows a preview of it in the main window. You can save this screenshot using the buttons on the bottom of the window, or take a new one using the controls to the right of the preview.</para>
 
             <para>To discard the current screenshot and take another screenshot, press the <guibutton>Take a New Screenshot</guibutton> (<keycombo action="simul">&Ctrl;<keycap>N</keycap></keycombo>) button.</para>
 
@@ -161,7 +161,7 @@
             <sect2>
                 <title>Options</title>
 
-                <para>The Options settings allow you to select whether the mouse cursor should be included in the screenshots, and whether to capture window decorations along with the image of a single application window. In <guilabel>Window Under Cursor</guilabel> mode, it also allows you to select if &spectacle; shall only capture the image of the current popup menu under the cursor, or also include the parent window. Finally, <guilabel>Quit after Save or Copy</guilabel> will quit Spectacle after any save or copy operations.</para>
+                <para>The Options settings allow you to select whether the mouse cursor should be included in the screenshots, and whether to capture window decorations along with the image of a single application window. In <guilabel>Window Under Cursor</guilabel> mode, it also allows you to select if &spectacle; shall only capture the image of the current popup menu under the cursor, or also include the parent window. Finally, <guilabel>Quit after Save or Copy</guilabel> will quit &spectacle; after any save or copy operations.</para>
 
                 <itemizedlist>
                     <listitem>
@@ -174,7 +174,7 @@
                         <para>The <guilabel>Capture the current pop-up only</guilabel> option is only enabled when the <guilabel>Window Under Cursor</guilabel> mode is selected in the <guilabel>Area</guilabel> combo-box. Checking this option captures only the popup menu under the cursor, without its parent window.</para>
                     </listitem>
                     <listitem>
-                        <para>The <guilabel>Quit after Save or Copy</guilabel> option will quit Spectacle after any saving or copying operations. Note that a copied screenshot will only be retained if you are running a clipboard manager that accepts images. KDE Klipper can be configured in this manner by right-clicking on its icon, selecting <guilabel>Configure Clipboard...</guilabel>, and unchecking <guilabel>Ignore images</guilabel>.</para>
+                        <para>The <guilabel>Quit after Save or Copy</guilabel> option will quit &spectacle; after any saving or copying operations. Note that a copied screenshot will only be retained if you are running a clipboard manager that accepts images. KDE Klipper can be configured in this manner by right-clicking on its icon, selecting <guilabel>Configure Clipboard...</guilabel>, and unchecking <guilabel>Ignore images</guilabel>.</para>
                     </listitem>
                 </itemizedlist>
             </sect2>
@@ -199,7 +199,7 @@
                 <varlistentry>
                     <term><guibutton>Configure...</guibutton></term>
                     <listitem>
-                        <para>Gives you access to Spectacle's Configure window where you can change the capture settings and default save location and filename.</para>
+                        <para>Gives you access to &spectacle;'s Configure window where you can change the capture settings and default save location and filename.</para>
                     </listitem>
                 </varlistentry>
                 <varlistentry>
