--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -29,8 +29,8 @@
 
         <legalnotice>&FDLNotice;</legalnotice>
 
-        <date>2018-03-06</date>
-        <releaseinfo>Applications 18.04</releaseinfo>
+        <date>2018-07-17</date>
+        <releaseinfo>Applications 18.08</releaseinfo>
 
         <abstract>
             <para>&spectacle; is a simple application for capturing desktop screenshots. It can capture images of the entire desktop, a single monitor, the currently active window, the window currently under the mouse, or a rectangular region of the screen. The images can then be printed, sent to other applications for manipulation, or quickly be saved as-is.</para>
@@ -150,6 +150,9 @@
                         <para>The <guilabel>Rectangular Region</guilabel> option allows you to select a rectangular region of your desktop with your mouse. This region may be spread across different outputs.</para>
 
                         <para>This mode does not immediately take a screenshot but allows you to draw a rectangle on your screen, which can be moved and resized as needed. Once the desired selection rectangle has been drawn, double-clicking anywhere on the screen, or pressing the &Enter; button on the keyboard will capture the screenshot.</para>
+                        
+                        <para>You can use the arrow keys to move and adjust the rectangle. Pressing the arrow keys will move the rectangle. Holding the <keycap>Shift</keycap> key while pressing the arrow keys will move the rectangle slowly, for fine-tuning your selection. Holding the <keycap>Alt</keycap> key while pressing the arrow keys will adjust the size of the rectangle.</para>
+                                    
                     </listitem>
                 </itemizedlist>
 
