Use entities in docs

--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -151,7 +151,7 @@
 
                         <para>This mode does not immediately take a screenshot but allows you to draw a rectangle on your screen, which can be moved and resized as needed. Once the desired selection rectangle has been drawn, double-clicking anywhere on the screen, or pressing the &Enter; button on the keyboard will capture the screenshot.</para>
                         
-                        <para>You can use the arrow keys to move and adjust the rectangle. Pressing the arrow keys will move the rectangle. Holding the <keycap>Shift</keycap> key while pressing the arrow keys will move the rectangle slowly, for fine-tuning your selection. Holding the <keycap>Alt</keycap> key while pressing the arrow keys will adjust the size of the rectangle.</para>
+                        <para>You can use the arrow keys to move and adjust the rectangle. Pressing the arrow keys will move the rectangle. Holding the &Shift; key while pressing the arrow keys will move the rectangle slowly, for fine-tuning your selection. Holding the &Alt; key while pressing the arrow keys will adjust the size of the rectangle.</para>
                                     
                     </listitem>
                 </itemizedlist>
