Use title case for the clipboard button
Summary: Use Title Case for the {nav Copy to Clipboard} button. In this case, it means making the word "to" lowercase.

Test Plan: Compile, deploy, open Spectacle, look at button title and docbook

Reviewers: #spectacle, #kde_applications, broulik, cfeck, #localization, lueck

Subscribers: pino, yurchor, kde-doc-english

Tags: #documentation

Differential Revision: https://phabricator.kde.org/D15083

--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -231,7 +231,7 @@
                     </listitem>
                 </varlistentry>
                 <varlistentry>
-                    <term><guibutton>Copy To Clipboard</guibutton></term>
+                    <term><guibutton>Copy to Clipboard</guibutton></term>
                     <listitem>
                         <para>Copies the current screenshot to the clipboard. You can also use the <keycombo action="simul">&Ctrl;<keycap>C</keycap></keycombo> keyboard shortcut for this.</para>
                     </listitem>
