Use more https in links

--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -51,7 +51,7 @@
 
         <para>&spectacle; is a simple application for capturing desktop screenshots. It can capture images of the entire desktop, a single monitor, the currently active window, the window currently under the mouse, or a rectangular region of the screen. The images can then be printed, sent to other applications for manipulation, or quickly be saved as-is.</para>
 
-        <para>Please report any problems or feature requests to the <ulink url="http://bugs.kde.org/">&kde; Bug Tracking System</ulink>.</para>
+        <para>Please report any problems or feature requests to the <ulink url="https://bugs.kde.org/">&kde; Bug Tracking System</ulink>.</para>
     </chapter>
 
     <chapter id="starting">
